UI (collection): fix top cards being cropped when moused over in cards list

--- a/core/src/css/component/collection/cards.component.scss
+++ b/core/src/css/component/collection/cards.component.scss
@@ -138,7 +138,9 @@
 		flex-wrap: wrap;
 		overflow-y: scroll;
 		align-content: start;
-		// flex-grow: 1;
+		// So that the cards don't get cropped by the overflow when moused over
+		padding-top: 15px;
+		margin-top: -15px;
 
 		li {
 			margin-right: 14px;
